# knowledge-service

./: .gitignore  DEV_SPEC.bak.md  DEV_SPEC.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a46f26680081_baseline.py
backend/app/: main.py
backend/app/api/: assistant.py  data.py  documents.py  evaluation.py  images.py  ingestion.py  query.py  router.py  system.py  websocket.py
backend/app/common/: database.py  database_sa.py  enums.py  log.py  pipeline_callback.py  settings.py  telemetry.py  types.py
backend/app/core/: __init__.py  cache.py  database.py  database_sa.py  settings.py  types.py
backend/app/factory/: __init__.py  factory.py
backend/app/ingestion/: ingest.py  integrity.py  models.py  pipeline.py  query.py
backend/app/libs/: __init__.py  factory.py
backend/app/mcp/: server.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  evaluation.py  image.py  ingestion.py  query.py
backend/app/observability/: __init__.py  instrumentation.py  progress.py  structlog_processors.py  telemetry.py
backend/app/query_engine/: __init__.py  dense_retriever.py  hybrid_search.py  pipeline.py  query_processor.py  query_types.py  reranker.py  rrf_fusion.py  sparse_retriever.py
backend/app/repositories/: __init__.py  base.py  (+5 more)
backend/config/: logrotate.conf  query_system_prompt.txt  settings.yaml
backend/scripts/: eval_oneclick.py  init_knowledge_db.sql  init_knowledge_rag_db.sql
backend/tests/: conftest.py  test_ingestion_e2e.py
(+186 files in other folders)
