[project]
name = "knowledge-service"
version = "0.1.0"
description = "RAG Knowledge Service Platform — FastAPI Backend + React Frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "markitdown>=0.1.0",
    "ragas>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require DB / external services)",
    "e2e: End-to-end tests",
    "llm: Tests that call LLM APIs",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
